# Animation-Thingy

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Components.md  Toolchain.md  setup.sh
.cache/clangd/index/: Addition.cpp.E9D77450036AB30E.idx  Addition.hpp.C97BC528566921E1.idx  Main.cpp.5ACBC82D5C4C0A3E.idx  Main.cpp.A7FF1B386F96919C.idx  Subtraction.cpp.5E3A2E8784D2034D.idx  Subtraction.hpp.5819E5538729BDA0.idx  TestAddition.cpp.2035DCE010D8C197.idx  TestSubtraction.cpp.40E157194D36B162.idx
.obsidian/: workspace.json
Components/Components/: Basic Syntax.md  Full Example.md  Sections.md
Components/Prototypes/: icon.md  line.md  rect.md
Docs/: Toolchain.md
Docs/Components/: Introduction.md
Docs/Components/Components/: Inheritance.md
Docs/Components/Prototypes/: text.md
Docs/Examples/LAN-WAN/: devices.apg  main.apg  primitives.apg
Docs/Examples/LAN-WAN/programs/: devices.apg  main.apg
Docs/Examples/database/: main.apg  primitives.apg  select.apg
Docs/Programs/: Blocks.md  Calls.md  Instructions.md
Examples/LAN-WAN/components/: main.acp
Examples/LAN-WAN/scripts/: devices.xyz  main.xyz
Modules/: CMakeLists.txt
Modules/ACPC/: CMakeLists.txt  Main.cpp
Modules/ALIB/src/: Addition.cpp  CMakeLists.txt  Main.cpp
Modules/ALIB/tests/: CMakeLists.txt  TestAddition.cpp
Modules/AnimationLibrary/: CMakeLists.txt
Modules/AnimationLibrary/src/: CMakeLists.txt  Colors.hpp  Types.hpp
Modules/AnimationLibrary/src/errors/: Errors.cpp  Errors.hpp
Modules/AnimationLibrary/src/readfile/: ReadFile.cpp
Modules/AnimationLibrary/src/statemachine/: DFA.cpp  DFA.hpp  NFA.cpp  NFA.hpp  NFAToDFA.cpp  NFAToDFA.hpp  RegexToNFA.cpp  RegexToNFA.hpp
Modules/AnimationLibrary/tests/: CMakeLists.txt  TestAddition.cpp  TestRead.cpp
Modules/AnimationLibrary/tests/resources/: TestRead.txt
Modules/Compiler/: CMakeLists.txt
Modules/Compiler/src/: CMakeLists.txt  Colors.hpp  Main.cpp  Types.hpp
Modules/Compiler/src/errors/: Errors.cpp  Errors.hpp
Modules/Compiler/src/files/: ReadFile.cpp  ReadFile.hpp
Modules/Compiler/src/language/: Language.hpp  Symbols.hpp
Modules/Compiler/src/parser/: OldParser.cpp  OldParser.hpp  Parser.cpp  Parser.hpp  State.cpp  State.hpp  Tables.cpp  Tables.hpp
Modules/Compiler/src/parser/sets/: First.cpp  First.hpp  Follow.cpp  Follow.hpp  Sets.cpp  Sets.hpp
Modules/Compiler/src/scanner/: Scanner.cpp  Scanner.hpp
Modules/Compiler/src/scanner/DFA/: DFA.cpp  DFA.hpp  DFAState.cpp  DFAState.hpp
Modules/Compiler/src/scanner/NFA/: NFA.cpp  NFA.hpp  NFAState.cpp  NFAState.hpp
Modules/Compiler/tests/: CMakeLists.txt  TestParser.cpp  TestReadFile.cpp  TestScanner.cpp
Modules/Compiler/tests/resources/: TestParserFail1.txt  TestParserFail2.txt  TestRead.txt  TestScannerFail.txt  TestScannerSuccess.txt
Modules/Compiler/tests/resources/LAN-WAN/: devices.apg  main.apg  primitives.apg
Modules/ComponentCompiler/: CMakeLists.txt
Modules/ComponentCompiler/src/: CMakeLists.txt  Main.cpp  Subtraction.cpp  Subtraction.hpp
Modules/ComponentCompiler/src/language/: Terminals.hpp
Modules/ComponentCompiler/tests/: CMakeLists.txt  TestSubtraction.cpp
Scripting/: Calls.md
